snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/error-0.1.0-20210817.095327-2.pom.md5
7e75b6aaf48fab5256a336d6041229ed